# AI_Copilot

./: .cursorignore  .cursorrules  .env.example  .gitignore  AGENTS.md  Cursor_Guide.md  README.md  e2e_runs_ux_seed.txt
backend/: pyproject.toml
backend/app/: __init__.py
backend/app/agents/: __init__.py  base.py  payload_normalize.py  skill_loader.py  tool_runtime.py
backend/app/api/: deps.py  main.py
backend/app/core/: defaults.py  enums.py  exceptions.py  logging.py  settings.py
backend/app/db/: datetime_types.py  models.py  (+1 more)
backend/tests/: conftest.py  test_agent_skills.py  test_agents.py  test_api.py  test_baseline_service.py  test_browser_control_service.py  test_browser_preview.py  test_chat.py  test_chat_model_selection.py  test_chat_nothink.py  test_chat_optimization.py  test_chat_provider_fallback.py  test_chat_provider_runtime.py  test_clarification_gates.py  test_coder_noop.py  test_deliverable_ui_gate.py  test_dep_verifier.py  test_event_bus.py  test_git_service.py  test_integration_guard.py  test_integration_guard_scope.py  test_learning_service.py  test_lint_runner_scaffold.py  test_lmstudio_catalog.py  test_lmstudio_messages.py  test_lmstudio_prepare_model.py  test_lmstudio_reasoning_stream.py  test_ollama_base_url.py  test_page_element_context.py  test_payload_normalize.py  test_pipeline_e2e_matrix.py  test_pipeline_tool_runtime.py  test_provider_health.py  test_provider_models_cache.py  test_provider_switch.py  test_reconnaissance.py  test_run_display.py  test_run_observability.py  test_run_outcome_service.py  test_scaffold_template.py  (+11 more)
(+296 files in other folders)
